updated index.html and readme.md files

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				<p>In some samples, you will see other libraries, anything which gets the job done and complements VueJS is being used.</p>
 				<p>Note: you need to use a modern desktop browser, I've not attempted to make this mobile friendly.</p>
 				<p>Note: This is work in progress, there will be new additions and modifications on a regular basis.</p>
-				<p>Note: Eventually a VueJS repo will be added to my GitHub account, once I have some times to set it up.</p>
+				<p>Repo: <a href='https://github.com/cgauthier/VUEJS_2.1.3' target=_blank >https://github.com/cgauthier/VUEJS_2.1.3</a></p>
 			  </div>
 			</div>
 			<table width="100%">
